--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   hive_flutter: ^1.1.0
   google_fonts: ^6.2.1
   flutter_svg: ^2.0.10+1
+  flutter_local_notifications: ^17.2.2
 
 dev_dependencies:
   flutter_test:
