--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,23 +28,17 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  cupertino_icons: ^1.0.6
   flutter:
     sdk: flutter
-
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.6
-  hive_flutter: ^1.1.0
-  google_fonts: ^6.2.1
-  flutter_svg: ^2.0.10+1
   flutter_local_notifications: ^17.2.2
+  flutter_svg: ^2.0.10+1
+  google_fonts: ^6.2.1
+  hive_flutter: ^1.1.0
+  shared_preferences: ^2.3.2
 
 dev_dependencies:
-  flutter_test:
-    sdk: flutter
-  hive_generator: ^2.0.1
-  build_runner: ^2.4.11 
+  build_runner: ^2.4.11
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -52,10 +46,12 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^3.0.0
+  flutter_test:
+    sdk: flutter
+  hive_generator: ^2.0.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
-
 # The following section is specific to Flutter packages.
 flutter:
 
@@ -68,13 +64,10 @@ flutter:
   assets:
     - assets/image/empty_state.svg
   #   - images/a_dot_ham.jpeg
-
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
-
   # For details regarding adding assets from package dependencies, see
   # https://flutter.dev/assets-and-images/#from-packages
-
   # To add custom fonts to your application, add a fonts section here,
   # in this "flutter" section. Each entry in this list should have a
   # "family" key with the font family name, and a "fonts" key with a
