--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.1.0+1
+version: 1.2.0+1
 
 environment:
   sdk: '>=3.4.4 <4.0.0'
@@ -32,7 +32,7 @@ dependencies:
   cupertino_icons: ^1.0.6
   flutter:
     sdk: flutter
-  flutter_local_notifications: ^17.2.2
+  flutter_lints: ^4.0.0
   flutter_svg: ^2.0.10+1
   google_fonts: ^6.2.1
   hive_flutter: ^1.1.0
@@ -40,6 +40,15 @@ dependencies:
 
 dev_dependencies:
   build_runner: ^2.4.11
+  hive_generator: ^2.0.1
+  flutter_launcher_icons: ^0.13.1
+
+flutter_launcher_icons:
+  android: "todo_icon"
+  remove_alpha_ios: true
+  ios: true
+  image_path: "assets/logo/todo_icon.png"
+  min_sdk_android: 21
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -64,6 +73,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/image/empty_state.svg
+    - assets/logo/todo_icon.png
   #   - images/a_dot_ham.jpeg
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
