--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   cupertino_icons: ^1.0.6
   flutter:
     sdk: flutter
+  flutter_alarm_clock: ^0.1.1
   flutter_lints: ^4.0.0
   flutter_svg: ^2.0.10+1
   google_fonts: ^6.2.1
