--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,7 +29,6 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   adaptive_theme: ^3.6.0
-  awesome_notifications: ^0.9.3+1
   cupertino_icons: ^1.0.6
   flutter:
     sdk: flutter
@@ -39,6 +38,9 @@ dependencies:
   google_fonts: ^6.2.1
   hive_flutter: ^1.1.0
   shared_preferences: ^2.3.2
+  flutter_local_notifications:
+  timezone:
+  permission_handler:
 
 dev_dependencies:
   build_runner: ^2.4.11
