--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.2.2+1
+version: 1.3.0+2
 
 environment:
   sdk: '>=3.4.4 <4.0.0'
@@ -41,6 +41,7 @@ dependencies:
   flutter_local_notifications:
   timezone:
   permission_handler:
+  provider:
 
 dev_dependencies:
   build_runner: ^2.4.11
